Fix header size on mobile

--- a/astrobin/static/css/astrobin-mobile.less
+++ b/astrobin/static/css/astrobin-mobile.less
@@ -190,6 +190,14 @@
         }
     }
 
+    h1 {
+        font-size: 26px;
+    }
+
+    h2 {
+        font-size: 22px;
+    }
+
     h4, p {
         padding: 0 12px;
     }
